force-app/main/default/objects/TVA_Config__mdt/TVA_Config__mdt.object-meta.xml
<CustomObject>
    <description>VAT / TVA rates by country ISO code. Used by InvoicePDFGenerator to compute HT/TTC amounts.</description>
    <label>TVA Config</label>
    <pluralLabel>TVA Configs</pluralLabel>
</CustomObject>