force-app/main/default/objects/TVA_Config__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code (ISO 3166-1 alpha-2)</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>