force-app/main/default/objects/TVA_Config__mdt/fields/TVA_Rate__c.field-meta.xml
<CustomField>
    <fullName>TVA_Rate__c</fullName>
    <label>TVA Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>